exdir = ${prefix}/share/TestU01/examples

ex_DATA = bat1.res bat2.res birth1.res ex3.res excel.dat vax.bin my16807.h \
   bat1.c bat2.c bat3.c birth1.c birth2.c ex1.c ex3.c ex4.c ex7.c \
   fcoll.c fbirth.c scat.c scat2.c my16807.c mrg32k3a.c xorshift.c \
   fbirth.res1.tex fbirth.res2.tex fcoll.res1.tex fcoll.res2.tex      
