pardir = ${prefix}/share/TestU01/param

par_DATA = CombCubLCG.par  InvExpl.par    InvImpl2b.par   LCGWu2.par \
   CombCubic2.par  InvExpl2a.par  LCGBad2.par     LFSR1.par   TausLCG2.par \
   CombL2.par      InvExpl2b.par  LCGGood.par     LFSR2.par   MRG3.par \
   CombWH2.par     InvImpl.par    LCGGranger.par  LFSR3.par \
   Cubic1.par      InvImpl2a.par  LCGPow2.par     MRG2.par
